kubernetes/main/apps/firecrawl-system/firecrawl/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firecrawl
  annotations:
    external-dns/unifi: "true"
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 401"
spec:
  hostnames:
    - firecrawl.techtales.io
  parentRefs:
    - name: envoy
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: firecrawl-api
          port: 3002
      matches:
        - path:
            type: PathPrefix
            value: /
